# multiscale-attention

./: .gitignore  AGENTS.md  README.md  env.yml  pyproject.toml
configs/: main.yaml
configs/data/: arena.yaml  arena_ns.yaml  arena_u.yaml  cfdbench.yaml  cns.yaml  fluids.yaml  fluids_bench.yaml  fluids_sample.yaml  fno.yaml  ins.yaml  sw.yaml
docs/: progress.md
notebooks/: dataset_load.ipynb  freq_visual.ipynb  plot_all.ipynb  plot_compare.ipynb  plot_err_per_step.ipynb  plot_slides.ipynb
scripts/: 0.sh  1.sh  2.sh  3.sh  archive.sh  baselines.sh  bcat.sh  bcat_test.sh  bcat_tests.sh  debug.sh  discretization_error.sh  full_archive.sh  multiscale_test.sh  new_archive.sh  old_archive.sh  paper_repro.sh  perturbation_stability.sh  save.sh  tmp.sh
src/: dataset.py  evaluate.py  main.py  trainer.py  vq_utils.py
tests/: check_attention_args.py  check_attention_identity_mixer.py  check_decoder_order.py  check_encoder_identity_attention.py  check_encoder_slow_order.py  check_hook_axis_swaps.py  check_hook_axis_swaps_real.py  check_layer_alignment_trace.py  check_predecode_hook.py  check_recombine_identity_mlp.py  check_spatial_tokens_plumbing.py  check_token_order.py  visualize_attn_masks.py
tests_by_gpt/: check_axis_swap_trace.py  check_axis_swaps.py  check_cross_branch_alignment.py  check_encoder_identity_attention.py  check_encoder_slow_order.py  check_generate_steps.py  check_layer_lift_alignment.py  check_layer_slow_alignment.py  check_mask_downsample_alignment.py  check_recombine_slow_order.py  check_split_encoder_pool_order.py  check_token_order_model.py
(+117 files in other folders)
